objects/vlocity_cmt__ContextDimension__c.object
<CustomObject>
    <description>Represents a context dimension used to create context rules.</description>
    <fields>
        <fullName>vlocity_cmt__AppContextDimension__c</fullName>
        <label>AppContext Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataType__c</fullName>
        <description>Type of Dimension,defines how it should be handled in rule conditions.</description>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsStrong__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if Dimension is strong or not. If strong &amp; a condition based on this dimension fails, the rule fails &amp; disqualifies the object.</description>
        <label>Strong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleDimensionField__c</fullName>
        <description>Rule field ,that this dimension maps to.</description>
        <label>Rule Dimension Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StrengthPriority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Strength priority  of this dimension,if this is a strong dimension. Higher the value,higher the priority.</description>
        <label>Strength Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Volatility__c</fullName>
        <description>TTL (time to live) for this context dimension value</description>
        <label>Volatility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                    <default>true</default>
                    <label>Session</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>OnDemand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Context Dimension</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>